Refactor: Move assets and data formats to docs directory

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,4 @@
 {
-    "extraPaths": ["src", "demo", "evaluation", "data_format"],
+    "extraPaths": ["src", "demo", "evaluation", "docs/data_format"],
     "typeCheckingMode": "off"
 }
