--- a/eval/config/datasets/locomo.yaml
+++ b/eval/config/datasets/locomo.yaml
@@ -1,4 +1,4 @@
-# LoCoMo Dataset Configuration
+﻿# LoCoMo Dataset Configuration
 
 name: "locomo"
 version: "1.0"
@@ -6,7 +6,7 @@ description: "Long-Context Modeling benchmark for conversational memory"
 
 # Data configuration
 data:
-  path: "locomo/locomo10.json"  # Relative to evaluation/data/ or project root data/
+  path: "locomo/locomo10.json"  # Relative to eval/data/ or project root data/
   format: "locomo"  # Native format, no conversion needed
 
 # Evaluation configuration
