--- a/eval/config/systems/memu.yaml
+++ b/eval/config/systems/memu.yaml
@@ -1,4 +1,4 @@
-# Memu System Configuration
+﻿# Memu System Configuration
 # 
 # Memu 使用 HTTP RESTful API 直接调用，无需 Python SDK
 # 参考文档：https://memu.pro/docs#memory-apis
