--- a/env.template
+++ b/env.template
@@ -24,13 +24,24 @@
 
 LLM_PROVIDER=openai
 # evaluation 请用 openai/gpt-4.1-mini 以保证结果可复现性，demo 可使用 x-ai/grok-4-fast 平衡速度/成本/效果
-LLM_MODEL=x-ai/grok-4-fast 
+LLM_MODEL=x-ai/grok-4-fast
 LLM_BASE_URL=https://openrouter.ai/api/v1
 LLM_API_KEY=sk-or-v1-xxxx
 LLM_TEMPERATURE=0.3
 LLM_MAX_TOKENS=32768
 # openrouter/其他的供应商设置，默认为 default，用 openrouter 的 qwen3 时建议设置为 cerebras
 # LLM_OPENROUTER_PROVIDER=cerebras
+
+# OpenAI Provider Retry & Concurrency Configuration / OpenAI Provider重试与并发配置
+# 简单且鲁棒的自适应退避策略：根据上次请求耗时动态调整等待时间
+OPENAI_TIMEOUT=30                      # API超时(秒)，默认30秒
+OPENAI_SDK_MAX_RETRIES=0               # SDK内部重试次数，默认0(完全由应用层控制)
+OPENAI_MAX_RETRIES=5                   # 应用层最大重试次数，默认5次
+OPENAI_BACKOFF_FACTOR=0.5              # 退避系数，等待时间 = 上次耗时 × 此系数
+OPENAI_MIN_BACKOFF=5                   # 最小退避时间(秒)，默认5秒
+OPENAI_MAX_BACKOFF=60                  # 最大退避时间(秒)，默认60秒
+OPENAI_SLOW_THRESHOLD=15               # 慢请求阈值(秒)，超过此值会警告服务繁忙
+OPENAI_MAX_CONCURRENT_REQUESTS=20      # 最大并发数，默认50，防止雪崩
 
 # ===================
 # DeepInfra Integration / DeepInfra集成
