Revise backoff policy

--- a/env.template
+++ b/env.template
@@ -33,15 +33,15 @@ LLM_MAX_TOKENS=32768
 # LLM_OPENROUTER_PROVIDER=cerebras
 
 # OpenAI Provider Retry & Concurrency Configuration / OpenAI Provider重试与并发配置
-# 简单且鲁棒的自适应退避策略：根据上次请求耗时动态调整等待时间
+# 综合退避策略：重试次数指数增长 + 超时感知退避 + 随机抖动
 OPENAI_TIMEOUT=30                      # API超时(秒)，默认30秒
-OPENAI_SDK_MAX_RETRIES=0               # SDK内部重试次数，默认0(完全由应用层控制)
+OPENAI_SDK_MAX_RETRIES=0               # SDK内部重试次数，默认0(完全由应用层控制，不要改)
 OPENAI_MAX_RETRIES=5                   # 应用层最大重试次数，默认5次
-OPENAI_BACKOFF_FACTOR=0.5              # 退避系数，等待时间 = 上次耗时 × 此系数
-OPENAI_MIN_BACKOFF=5                   # 最小退避时间(秒)，默认5秒
-OPENAI_MAX_BACKOFF=60                  # 最大退避时间(秒)，默认60秒
-OPENAI_SLOW_THRESHOLD=15               # 慢请求阈值(秒)，超过此值会警告服务繁忙
-OPENAI_MAX_CONCURRENT_REQUESTS=20      # 最大并发数，默认50，防止雪崩
+OPENAI_MIN_BACKOFF=10                  # 最小退避时间(秒)，默认5秒，指数退避基数
+OPENAI_MAX_BACKOFF=60                  # 最大退避时间(秒)，默认60秒，避免过长等待
+OPENAI_SLOW_THRESHOLD=15               # 慢请求阈值(秒)，超过此值增加额外退避
+OPENAI_TIMEOUT_BACKOFF_MULTIPLIER=1.0  # 超时退避系数，超时部分乘以此系数作为额外退避(默认0.5，建议1.0)
+OPENAI_MAX_CONCURRENT_REQUESTS=20      # 最大并发数，默认20，防止雪崩
 
 # ===================
 # DeepInfra Integration / DeepInfra集成
