Revise backoff policy

--- a/env.template
+++ b/env.template
@@ -33,15 +33,22 @@ LLM_MAX_TOKENS=32768
 # LLM_OPENROUTER_PROVIDER=cerebras
 
 # OpenAI Provider Retry & Concurrency Configuration / OpenAI Provider重试与并发配置
-# 综合退避策略：重试次数指数增长 + 超时感知退避 + 随机抖动
+#
+# 退避策略 (智能三级退避):
+#   1. 优先: 使用OpenAI返回的Retry-After header
+#   2. 其次: 使用x-ratelimit-reset-* headers计算等待时间
+#   3. 回退: 基于单个请求自身失败数的指数退避 (1 * 2^min(own_failures, 9)) + 随机抖动(0~2秒)
+#
+# 并发控制:
+#   - 使用固定并发数的semaphore控制并发请求数
+#   - Semaphore在请求的整个生命周期(包括所有重试)内持有
+#   - 退避在semaphore内部执行，确保严格的并发控制
+#
 OPENAI_TIMEOUT=30                      # API超时(秒)，默认30秒
 OPENAI_SDK_MAX_RETRIES=0               # SDK内部重试次数，默认0(完全由应用层控制，不要改)
-OPENAI_MAX_RETRIES=5                   # 应用层最大重试次数，默认5次
-OPENAI_MIN_BACKOFF=10                  # 最小退避时间(秒)，默认5秒，指数退避基数
-OPENAI_MAX_BACKOFF=60                  # 最大退避时间(秒)，默认60秒，避免过长等待
-OPENAI_SLOW_THRESHOLD=15               # 慢请求阈值(秒)，超过此值增加额外退避
-OPENAI_TIMEOUT_BACKOFF_MULTIPLIER=1.0  # 超时退避系数，超时部分乘以此系数作为额外退避(默认0.5，建议1.0)
-OPENAI_MAX_CONCURRENT_REQUESTS=20      # 最大并发数，默认20，防止雪崩
+OPENAI_MAX_RETRIES=10                  # 应用层最大重试次数，默认10次
+OPENAI_MAX_BACKOFF=512                 # 最大退避时间(秒)，默认512秒(匹配2^9)，避免过长等待
+OPENAI_CONCURRENT_REQUESTS=10          # 固定并发数，默认10
 
 # ===================
 # DeepInfra Integration / DeepInfra集成
