--- a/env.template
+++ b/env.template
@@ -32,23 +32,20 @@ LLM_MAX_TOKENS=32768
 # openrouter/其他的供应商设置，默认为 default，用 openrouter 的 qwen3 时建议设置为 cerebras
 # LLM_OPENROUTER_PROVIDER=cerebras
 
-# OpenAI Provider Retry & Concurrency Configuration / OpenAI Provider重试与并发配置
+# OpenAI Provider Configuration / OpenAI Provider配置
 #
-# 退避策略 (智能三级退避):
-#   1. 优先: 使用OpenAI返回的Retry-After header
-#   2. 其次: 使用x-ratelimit-reset-* headers计算等待时间
-#   3. 回退: 基于单个请求自身失败数的指数退避 (1 * 2^min(own_failures, 9)) + 随机抖动(0~2秒)
+# 使用openlimit库进行速率和并发控制:
+#   - 自动处理RPM (requests per minute) 和TPM (tokens per minute) 限制
+#   - 基于leaky bucket算法的精确速率控制
+#   - 自动token计数和等待调度
 #
-# 并发控制:
-#   - 使用固定并发数的semaphore控制并发请求数
-#   - Semaphore在请求的整个生命周期(包括所有重试)内持有
-#   - 退避在semaphore内部执行，确保严格的并发控制
+# Tier 1 用户 + gpt-4o-mini 推荐配置:
+#   - REQUEST_LIMIT: 每分钟请求数限制 (保守值500，激进值2000)
+#   - TOKEN_LIMIT: 每分钟token数限制 (保守值150k，激进值200k)
 #
 OPENAI_TIMEOUT=30                      # API超时(秒)，默认30秒
-OPENAI_SDK_MAX_RETRIES=0               # SDK内部重试次数，默认0(完全由应用层控制，不要改)
-OPENAI_MAX_RETRIES=20                  # 应用层最大重试次数，默认10次
-OPENAI_MAX_BACKOFF=512                 # 最大退避时间(秒)，默认512秒(匹配2^9)，避免过长等待
-OPENAI_CONCURRENT_REQUESTS=7           # 固定并发数，默认10
+OPENAI_REQUEST_LIMIT=500               # 每分钟最大请求数 (RPM)，Tier 1保守值
+OPENAI_TOKEN_LIMIT=150000              # 每分钟最大token数 (TPM)，Tier 1保守值
 
 # ===================
 # DeepInfra Integration / DeepInfra集成
