--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ dependencies = [
     "html2text>=2025.4.15",
     "certifi>=2025.10.5",
     "aiolimiter>=1.2.1",
+    "openlimit>=0.3.0",
     "nltk>=3.9.2",
 ]
 
