Revise backoff logic

--- a/env.template
+++ b/env.template
@@ -38,14 +38,17 @@ LLM_MAX_TOKENS=32768
 #   - 自动处理RPM (requests per minute) 和TPM (tokens per minute) 限制
 #   - 基于leaky bucket算法的精确速率控制
 #   - 自动token计数和等待调度
+#   - 固定使用60秒时间窗口（每分钟限制）
 #
 # Tier 1 用户 + gpt-4o-mini 推荐配置:
 #   - REQUEST_LIMIT: 每分钟请求数限制 (保守值500，激进值2000)
 #   - TOKEN_LIMIT: 每分钟token数限制 (保守值150k，激进值200k)
 #
-OPENAI_TIMEOUT=30                      # API超时(秒)，默认30秒
-OPENAI_REQUEST_LIMIT=500               # 每分钟最大请求数 (RPM)，Tier 1保守值
+OPENAI_TIMEOUT=120                     # API超时(秒)，增加到120秒以应对长请求
+OPENAI_MAX_RETRIES=0                   # SDK层重试次数，设为0禁用SDK重试，由评估框架控制重试
+OPENAI_REQUEST_LIMIT=50                # 每分钟最大请求数 (RPM)，降低以避免服务器过载
 OPENAI_TOKEN_LIMIT=150000              # 每分钟最大token数 (TPM)，Tier 1保守值
+
 
 # ===================
 # DeepInfra Integration / DeepInfra集成
