Change another backoff

--- a/env.template
+++ b/env.template
@@ -33,21 +33,26 @@ LLM_MAX_TOKENS=32768
 # LLM_OPENROUTER_PROVIDER=cerebras
 
 # OpenAI Provider Configuration / OpenAI Provider配置
-#
-# 使用openlimit库进行速率和并发控制:
-#   - 自动处理RPM (requests per minute) 和TPM (tokens per minute) 限制
-#   - 基于leaky bucket算法的精确速率控制
-#   - 自动token计数和等待调度
-#   - 固定使用60秒时间窗口（每分钟限制）
-#
-# Tier 1 用户 + gpt-4o-mini 推荐配置:
-#   - REQUEST_LIMIT: 每分钟请求数限制 (保守值500，激进值2000)
-#   - TOKEN_LIMIT: 每分钟token数限制 (保守值150k，激进值200k)
-#
-OPENAI_TIMEOUT=120                     # API超时(秒)，增加到120秒以应对长请求
-OPENAI_MAX_RETRIES=0                   # SDK层重试次数，设为0禁用SDK重试，由评估框架控制重试
-OPENAI_REQUEST_LIMIT=50                # 每分钟最大请求数 (RPM)，降低以避免服务器过载
-OPENAI_TOKEN_LIMIT=150000              # 每分钟最大token数 (TPM)，Tier 1保守值
+OPENAI_TIMEOUT=40                     # API超时(秒)
+OPENAI_MAX_RETRIES=0                   # SDK层重试次数（让SDK处理临时错误）
+
+# Tenacity retry configuration / Tenacity重试配置
+# 使用指数退避策略自动处理速率限制和临时错误
+OPENAI_RETRY_MIN_WAIT=5                # 重试最小等待时间(秒)
+OPENAI_RETRY_MAX_WAIT=60               # 重试最大等待时间(秒)
+OPENAI_RETRY_ATTEMPTS=20                # 最大重试次数
+
+# Multi-layer rate limiting / 多层限流控制
+# Layer 0: HTTPX连接池 (防止底层TCP连接耗尽，自动配置为 max_concurrent * 4)
+# Layer 1: 物理并发控制 (防止请求洪峰)
+OPENAI_MAX_CONCURRENT=20               # Provider最大并发数
+
+# Layer 2: 主动速率限制 (防止 429 错误)
+# ⚠️  重要：设置为你的 OpenAI tier 限制的 80% 以留有余地
+# Free tier: ~60 RPM  -> 建议设置 48
+# Tier 1: ~500 RPM    -> 建议设置 400
+# Tier 2: ~5000 RPM   -> 建议设置 4000
+OPENAI_RPM_LIMIT=400                   # 每分钟请求数限制 (proactive throttling)
 
 
 # ===================
@@ -123,6 +128,11 @@ API_BASE_URL=http://localhost:8001
 # ===================
 # Evaluation Configuration / 评估配置
 # ===================
+
+# Answer stage batch processing / Answer 阶段批处理配置
+# Batch 只负责批次管理，超时和并发由 Provider 层控制
+EVAL_ANSWER_BATCH_SIZE=20              # 每批次处理的请求数（batch间串行，batch内并发）
+EVAL_ANSWER_BATCH_DELAY=3              # batch间延迟（秒），用于主动降低请求频率
 
 # Concurrency settings for each evaluation stage (避免API限流)
 # Recommended for OpenAI free tier: 3-5, paid tier: 10-20
