--- a/env.template
+++ b/env.template
@@ -33,13 +33,13 @@ LLM_MAX_TOKENS=32768
 # LLM_OPENROUTER_PROVIDER=cerebras
 
 # OpenAI Provider Configuration / OpenAI Provider配置
-OPENAI_TIMEOUT=40                     # API超时(秒)
+OPENAI_TIMEOUT=120                     # API超时(秒)
 OPENAI_MAX_RETRIES=0                   # SDK层重试次数（让SDK处理临时错误）
 
 # Tenacity retry configuration / Tenacity重试配置
 # 使用指数退避策略自动处理速率限制和临时错误
-OPENAI_RETRY_MIN_WAIT=5                # 重试最小等待时间(秒)
-OPENAI_RETRY_MAX_WAIT=60               # 重试最大等待时间(秒)
+OPENAI_RETRY_MIN_WAIT=5                 # 重试最小等待时间(秒)
+OPENAI_RETRY_MAX_WAIT=300               # 重试最大等待时间(秒)
 OPENAI_RETRY_ATTEMPTS=20                # 最大重试次数
 
 # Multi-layer rate limiting / 多层限流控制
@@ -52,7 +52,7 @@ OPENAI_MAX_CONCURRENT=20               # Provider最大并发数
 # Free tier: ~60 RPM  -> 建议设置 48
 # Tier 1: ~500 RPM    -> 建议设置 400
 # Tier 2: ~5000 RPM   -> 建议设置 4000
-OPENAI_RPM_LIMIT=400                   # 每分钟请求数限制 (proactive throttling)
+OPENAI_RPM_LIMIT=200                   # 每分钟请求数限制 (proactive throttling)
 
 
 # ===================
@@ -133,6 +133,7 @@ API_BASE_URL=http://localhost:8001
 # Batch 只负责批次管理，超时和并发由 Provider 层控制
 EVAL_ANSWER_BATCH_SIZE=20              # 每批次处理的请求数（batch间串行，batch内并发）
 EVAL_ANSWER_BATCH_DELAY=3              # batch间延迟（秒），用于主动降低请求频率
+EVAL_ANSWER_REQUEST_INTERVAL=0.5       # batch内请求间隔（秒），控制请求发送速率
 
 # Concurrency settings for each evaluation stage (避免API限流)
 # Recommended for OpenAI free tier: 3-5, paid tier: 10-20
